Clean some warning